--- a/photo-gallery-flexbox.html
+++ b/photo-gallery-flexbox.html
@@ -10,15 +10,15 @@
 <body>
     <section class="gallery">
         <ul>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture1.jpg" alt="picture1"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture2.jpg" alt="picture2"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture3.jpg" alt="picture3"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture4.jpg" alt="picture4"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture5.jpg" alt="picture5"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture6.jpg" alt="picture6"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture7.jpg" alt="picture7"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture8.jpg" alt="picture8"></li>
-            <li><img src="/06/06_Photo-gallery-flexbox/images/picture9.jpg" alt="picture9"></li>
+            <li><img src="picture1.jpg" alt="picture1"></li>
+            <li><img src="picture2.jpg" alt="picture2"></li>
+            <li><img src="picture3.jpg" alt="picture3"></li>
+            <li><img src="picture4.jpg" alt="picture4"></li>
+            <li><img src="picture5.jpg" alt="picture5"></li>
+            <li><img src="picture6.jpg" alt="picture6"></li>
+            <li><img src="picture7.jpg" alt="picture7"></li>
+            <li><img src="picture8.jpg" alt="picture8"></li>
+            <li><img src="picture9.jpg" alt="picture9"></li>
         </ul>
     </section>
 </body>
